Fixed issue background

--- a/css/main.css
+++ b/css/main.css
@@ -114,31 +114,9 @@ body {
 }
 
 @media only screen and (max-width: 768px) {
-  .navbar-custom {
-    /* Chèn hình nền */
-    background-image: url('/img/My_Picture/footer-backgound-vertical.png'); /* Đường dẫn đến hình nền */
-    background-size: cover; /* Tùy chỉnh kích thước hình nền để phủ toàn bộ phần tử */
-    background-position: center; /* Căn chỉnh hình nền theo trung tâm */
-    background-repeat: no-repeat; /* Không lặp lại hình nền */
-    background-attachment: fixed;
-  }
-
   body {
     /* Chèn hình nền */
     background-image: url('/img/My_Picture/body-backgound-vertical.png'); /* Đường dẫn đến hình nền */
-    background-size: cover; /* Tùy chỉnh kích thước hình nền để phủ toàn bộ phần tử */
-    background-position: center; /* Căn chỉnh hình nền theo trung tâm */
-    background-repeat: no-repeat; /* Không lặp lại hình nền */
-    background-attachment: fixed;
-  }
-
-  footer {
-    /* Chèn hình nền */
-    background-image: url('/img/My_Picture/footer-backgound-vertical.png'); /* Đường dẫn đến hình nền */
-    background-size: cover; /* Tùy chỉnh kích thước hình nền để phủ toàn bộ phần tử */
-    background-position: center; /* Căn chỉnh hình nền theo trung tâm */
-    background-repeat: no-repeat; /* Không lặp lại hình nền */
-    background-attachment: fixed;
   }
 }
 
@@ -444,6 +422,11 @@ img {
 
 @media only screen and (max-width: 767px) {
   /* update 13/4/2024 tat cho thiet bi di dong */
+  .navbar-custom {
+    /* Chèn hình nền */
+    background-image: url('/img/My_Picture/footer-backgound-vertical.png'); /* Đường dẫn đến hình nền */
+  }
+
   .navbar-custom .nav .navlinks-container.show-children {
     background: none;
   }
@@ -528,6 +511,13 @@ footer .theme-by {
 
   footer .copyright {
     font-size: 16px;
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  footer {
+    /* Chèn hình nền */
+    background-image: url('/img/My_Picture/footer-backgound-vertical.png'); /* Đường dẫn đến hình nền */
   }
 }
 
