--- a/_includes/header.html
+++ b/_includes/header.html
@@ -63,6 +63,7 @@
             <hr class="small">
             <span class="{{ include.type }}-subheading">{{ page.subtitle }}</span>
             {% else %}
+            <hr class="small">
             <h2 class="{{ include.type }}-subheading">{{ page.subtitle }}</h2>
             {% endif %}
             {% endif %}
