Fixed button tags.html

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -248,10 +248,10 @@
 
 
 <!-- Back to top button / Tạo nút nhấn lên TOP -->
-<a id="button"></a>
+<a id="button_onTop"></a>
 
 <script>
-  var btn = $('#button');
+  var btn = $('#button_onTop');
   $(window).scroll(function() {
     if ($(window).scrollTop() > 300) {
       btn.addClass('show');
