--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,7 +1,7 @@
 <head>
-  <meta charset="utf-8" />
+  <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, viewport-fit=cover">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <title>
     {% if page.use-site-title %}
@@ -15,8 +15,6 @@
 
   <meta name="author" content="{{ site.author.name }}" />
   <meta name="description" content="{{ site.description }}">
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, viewport-fit=cover" />
   <meta name="theme-color" content="#a50509" />
   <meta name="keywords"
     content="linux, python, math, mathematics, bash, google summer of code, raspberry pi, music, Internet of Things, research, android" />
@@ -28,13 +26,7 @@
   <!-- favicon -->
   <link rel="shortcut icon" type="image/ico" href="/favicon.ico" />
 
-  <!-- MathJax -->
-  <script
-    type="text/x-mathjax-config">MathJax.Hub.Config({messageStyle: 'none',tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']]}});</script>
-  <script type="text/javascript"
-    src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.4/MathJax.js?config=TeX-MML-AM_CHTML" async></script>
-  <script type="text/x-mathjax-config">MathJax.Hub.Config({TeX: { equationNumbers: { autoNumber: "AMS" } }});</script>
-
+  <!-- feed -->
   <link rel="alternate" type="application/rss+xml"
     title="{{ site.title }} {{ site.title-separator }} {{ site.description }}" href="{{ site.baseurl }}/feed.xml" />
 
@@ -214,6 +206,7 @@
     }
   </script> -->
 
+  <meta name="google-site-verification" content="5mbU8JvAfpv2rEEqq2CRENh1fqjGEx_LJdD5PLhErus" />
   <!-- Global site tag (gtag.js) - Google Ads: 907342272 -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=AW-907342272"></script>
   <script>
