Updated css background

--- a/css/main.css
+++ b/css/main.css
@@ -109,15 +109,8 @@ body {
   background-image: url('/img/My_Picture/body-backgound.png'); /* Đường dẫn đến hình nền */
   background-size: cover; /* Tùy chỉnh kích thước hình nền để phủ toàn bộ phần tử */
   background-position: center; /* Căn chỉnh hình nền theo trung tâm */
-  background-repeat: round; 
+  background-repeat: no-repeat; 
   background-attachment: fixed;
-}
-
-@media only screen and (max-width: 768px) {
-  body {
-    /* Chèn hình nền */
-    background-image: url('/img/My_Picture/footer-backgound-vertical.png'); /* Đường dẫn đến hình nền */
-  }
 }
 
 p {
@@ -281,7 +274,7 @@ img {
   background-image: url('/img/My_Picture/footer-backgound.png'); /* Đường dẫn đến hình nền */
   background-size: cover; /* Tùy chỉnh kích thước hình nền để phủ toàn bộ phần tử */
   background-position: center; /* Căn chỉnh hình nền theo trung tâm */
-  background-repeat: round; 
+  background-repeat: no-repeat; 
   background-attachment: fixed;
 }
 
@@ -421,12 +414,6 @@ img {
 }
 
 @media only screen and (max-width: 767px) {
-  /* update 13/4/2024 tat cho thiet bi di dong */
-  .navbar-custom {
-    /* Chèn hình nền */
-    background-image: url('/img/My_Picture/footer-backgound-vertical.png'); /* Đường dẫn đến hình nền */
-  }
-
   .navbar-custom .nav .navlinks-container.show-children {
     background: none;
   }
@@ -476,7 +463,7 @@ footer {
   background-image: url('/img/My_Picture/footer-backgound.png'); /* Đường dẫn đến hình nền */
   background-size: cover; /* Tùy chỉnh kích thước hình nền để phủ toàn bộ phần tử */
   background-position: center; /* Căn chỉnh hình nền theo trung tâm */
-  background-repeat: round; 
+  background-repeat: no-repeat; 
   background-attachment: fixed;
 }
 
@@ -515,9 +502,18 @@ footer .theme-by {
 }
 
 @media only screen and (max-width: 768px) {
-  footer {
+  /* update 13/4/2024 tat cho thiet bi di dong */
+  .navbar-custom {
     /* Chèn hình nền */
     background-image: url('/img/My_Picture/footer-backgound-vertical.png'); /* Đường dẫn đến hình nền */
+  }
+  body {
+    /* Chèn hình nền */
+    background-image: url('/img/My_Picture/footer-backgound-vertical.png'); /* Đường dẫn đến hình nền */
+  }
+  footer {
+    /* Chèn hình nền */
+    background-image: url('/img/My_Picture/footer-backgound-vertical.png'); 
   }
 }
 
