Google Ads - cho phep gg dat quang cao

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -222,4 +222,8 @@
     gtag('event', 'conversion', { 'send_to': 'AW-907342272/chcJCMvftfQCEMDj07AD' });
   </script>
 
+  <!-- Google Ads - cho phep gg dat quang cao -->
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9121478203669306"
+  crossorigin="anonymous"></script>
+
 </head>
