Updated folder dist

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -188,8 +188,8 @@
 </footer>
 
 <!-- Simple Jekyll Search -->
-<script src="/js/jquery-3.5.1.js"></script>
-<script src="/js/simple-jekyll-search.min.js" | {{ prepend: site.baseurl }}></script>
+<script src="/dist/js/jquery-3.5.1.js"></script>
+<script src="/dist/js/simple-jekyll-search.min.js" | {{ prepend: site.baseurl }}></script>
 <!-- Simple Jekyll Search -->
 <script>
   // https://stackoverflow.com/questions/1912501/unescape-html-entities-in-javascript
