--- a/_includes/sidebar-post-nav.html
+++ b/_includes/sidebar-post-nav.html
@@ -8,8 +8,8 @@
 </section>
 </div>
 
-<link rel="stylesheet" href="/css/sidebar-post-nav.css">
-<script language="JavaScript" type="text/javascript" src="/js/jquery-3.5.1.js"></script>
+<link rel="stylesheet" href="/dist/css/sidebar-post-nav.css">
+<script language="JavaScript" type="text/javascript" src="/dist/js/jquery-3.5.1.js"></script>
 <script type="text/javascript">
     $(document).ready(function(){
         $( "article h3" ).each(function( index ) {
