--- a/_layouts/minimal.html
+++ b/_layouts/minimal.html
@@ -1,10 +1,10 @@
 ---
 common-css:
-  - "/css/bootstrap.min.css"
-  - "/css/main-minimal.css"
+  - "/dist/css/bootstrap.min.css"
+  - "/dist/css/main-minimal.css"
 common-js:
-  - "/js/jquery-3.5.1.js"
-  - "/js/bootstrap.min.js"
+  - "/dist/js/jquery-3.5.1.js"
+  - "/dist/js/bootstrap.min.js"
 ---
 
 <!DOCTYPE html>
