--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -1,20 +1,20 @@
 ---
 common-css:
-- "/css/bootstrap.min.css"
-- "/css/bootstrap-social.css"
-- "/css/main.css"
-- "/css/text_animation_css.css"
-- "/css/prism.css"
+- "/dist/css/bootstrap.min.css"
+- "/dist/css/bootstrap-social.css"
+- "/dist/css/main.css"
+- "/dist/css/text_animation_css.css"
+- "/dist/css/prism.css"
 common-ext-css:
 - "//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
 common-googlefonts:
 - "Lora:400,700,400italic,700italic"
 - "Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800"
 common-js:
-- "/js/jquery-3.5.1.js"
-- "/js/bootstrap.min.js"
-- "/js/main.js"
-- "/js/prism.js"
+- "/dist/js/jquery-3.5.1.js"
+- "/dist/js/bootstrap.min.js"
+- "/dist/js/main.js"
+- "/dist/js/prism.js"
 ---
 
 <!DOCTYPE html>
