--- a/_layouts/books.html
+++ b/_layouts/books.html
@@ -1,17 +1,17 @@
 ---
 common-css:
-- "/css/bootstrap.min.css"
-- "/css/bootstrap-social.css"
-- "/css/main.css"
+- "/dist/css/bootstrap.min.css"
+- "/dist/css/bootstrap-social.css"
+- "/dist/css/main.css"
 common-ext-css:
 - "//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
 common-googlefonts:
 - "Lora:400,700,400italic,700italic"
 - "Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800"
 common-js:
-- "/js/jquery-1.12.4.min.js"
-- "/js/bootstrap.min.js"
-- "/js/main.js"
+- "/dist/js/jquery-1.12.4.min.js"
+- "/dist/js/bootstrap.min.js"
+- "/dist/js/main.js"
 ---
 
 <!DOCTYPE html>
