Cải thiện hiệu suất load trang, SEO

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -14,10 +14,10 @@
   </title>
 
   <meta name="author" content="{{ site.author.name }}" />
-  <meta name="description" content="{{ site.description }}">
+  <meta name="description" content="{{ page.title }} - {{ page.subtitle }}">
   <meta name="theme-color" content="#a50509" />
   <meta name="keywords"
-    content="linux, python, math, mathematics, bash, google summer of code, raspberry pi, music, Internet of Things, research, android" />
+    content="linux, python, math, bash, google summer of code, raspberry pi, music, Internet of Things, research, android" />
 
   <!-- lightbox : https://github.com/lokesh/lightbox2.git -->
   <!-- lightbox : https://lokeshdhakar.com/projects/lightbox2/ -->
