--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -8,11 +8,11 @@
       </button>
       {% if site.title-img %}
       <a class="navbar-brand navbar-brand-logo" href="{{ site.url }}">
-        <img src="{{ site.url }}/img/My_Picture/avatar_github1.webp" />
+        <img src="{{ site.url }}/img/My_Picture/avatar_github1.webp" alt="bangnguyendev"/>
       </a>
       {% else %}
       <a class="navbar-brand navbar-brand-logo" href="{{ site.url }}">
-        <img src="{{ site.url }}/img/My_Picture/avatar_github1.webp" />
+        <img src="{{ site.url }}/img/My_Picture/avatar_github1.webp" alt="bangnguyendev"/>
       </a>
       <a class="navbar-brand" href="{{ site.url }}">{{ site.title }}</a>
       {% endif %}
@@ -24,7 +24,7 @@
         {% for link in site.navbar-links %}
         {% if link[1].first %}
         <li class="navlinks-container">
-          <a class="navlinks-parent" href="javascript:void(0)">{{ link[0] }}</a>
+          <a class="navlinks-parent" href="#">{{ link[0] }}</a>
           <div class="navlinks-children">
             {% for childlink in link[1] %}
               {% for linkparts in childlink %}
@@ -41,7 +41,7 @@
         {% endfor %}
         <!-- Add nút Tìm kiếm trong blog -->
         <li class="search-icon">
-          <a href="javascript:void(0)">
+          <a href="#"> 
               <i class="fa fa-search"></i>
           </a>
       </li>
