--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -24,7 +24,7 @@
         {% for link in site.navbar-links %}
         {% if link[1].first %}
         <li class="navlinks-container">
-          <a class="navlinks-parent" href="#">{{ link[0] }}</a>
+          <a class="navlinks-parent" href="#" aria-label="{{ link[0] }}">{{ link[0] }}</a>
           <div class="navlinks-children">
             {% for childlink in link[1] %}
               {% for linkparts in childlink %}
@@ -41,7 +41,7 @@
         {% endfor %}
         <!-- Add nút Tìm kiếm trong blog -->
         <li class="search-icon">
-          <a href="#"> 
+          <a href="#" aria-label="Search"> 
               <i class="fa fa-search"></i>
           </a>
       </li>
