--- a/_includes/head.html
+++ b/_includes/head.html
@@ -27,7 +27,7 @@
   <!-- favicon -->
   <link rel="shortcut icon" type="image/ico" href="/favicon.ico" />
 
-  <!-- feed -->
+  <!-- feed.xml sitemap -->
   <link rel="alternate" type="application/rss+xml"
     title="{{ site.title }} {{ site.title-separator }} {{ site.description }}" href="{{ site.baseurl }}/feed.xml" />
 
