--- a/_includes/header.html
+++ b/_includes/header.html
@@ -42,8 +42,7 @@
               {% endif %}
 
               {% if include.type == "post" %}
-              <span class="post-meta">Posted on {{ page.date | date: "%B %-d, %Y" }} &middot; {% include read_time.html
-                content=page.content %}</span>
+              <span class="post-meta">Posted on {{ page.date | date: "%B %-d, %Y" }} &middot; {% include read_time.html content=page.content %}</span>
               {% endif %}
             </div>
           </div>
