--- a/_includes/read_time.html
+++ b/_includes/read_time.html
@@ -1,4 +1,14 @@
 <span class="reading-time" title="Estimated read time">
+    ⏱️
     {% assign words = include.content | number_of_words %}
-    {% if words < 270 %} 1 min {% else %} {{ words | divided_by:135 }} mins {% endif %} read </span>
-  
+    {% assign reading_speed = 100 %}
+    {% assign reading_time = words | divided_by:reading_speed %}
+    {% if reading_time < 1 %}
+        {{ reading_time | times:60 | round }} secs
+    {% elsif reading_time == 1 %}
+        1 min
+    {% else %}
+        {{ reading_time | round }} mins
+    {% endif %}
+    read
+</span>
