--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -6,16 +6,12 @@
         <span class="sr-only">Toggle navigation</span>
           <i class="fa fa-cog fa-spin fa-1x fa-fw"></i>
       </button>
-      {% if site.title-img %}
+
       <a class="navbar-brand navbar-brand-logo" href="{{ site.url }}">
-        <img src="{{ site.url }}/img/My_Picture/avatar_github1.webp" alt="bangnguyendev"/>
-      </a>
-      {% else %}
-      <a class="navbar-brand navbar-brand-logo" href="{{ site.url }}">
-        <img src="{{ site.url }}/img/My_Picture/avatar_github1.webp" alt="bangnguyendev"/>
+        <img src="{{ site.avatar }}" alt="bangnguyendev"/>
       </a>
       <a class="navbar-brand" href="{{ site.url }}">{{ site.title }}</a>
-      {% endif %}
+
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
@@ -47,14 +43,5 @@
       </li>
       </ul>
     </div>
-
-    <!-- ALways use my avatar, irrespective of the post image -->
-    <!-- <div class="avatar-container">
-      <div class="avatar-img-border">
-        <a href="{{ site.url }}">
-          <img class="avatar-img" src="{{ site.url }}/img/My_Picture/avatar_github.webp" />
-      </a>
-      </div>
-    </div> -->
   </div>
 </nav>
