--- a/_includes/footer-scripts.html
+++ b/_includes/footer-scripts.html
@@ -110,3 +110,6 @@
     $('html, body').animate({scrollTop:0}, '300');
   });
 </script>
+
+<!-- lightbox -->
+<script src="/dist/js/lightbox.min.js"></script>
