Updated "nav button" for Books and add menu "Tools"

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -4,7 +4,7 @@
     <div class="navbar-header">
       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#main-navbar">
         <span class="sr-only">Toggle navigation</span>
-          <i class="fa fa-cog fa-spin fa-1x fa-fw"></i>
+          <i style="color: #242424;" class="fa fa-cog fa-spin fa-1x fa-fw"></i>
       </button>
 
       <a class="navbar-brand navbar-brand-logo" href="{{ site.url }}">
