--- a/_layouts/books.html
+++ b/_layouts/books.html
@@ -9,7 +9,7 @@ common-googlefonts:
 - "Lora:400,700,400italic,700italic"
 - "Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800"
 common-js:
-- "/dist/js/jquery-1.12.4.min.js"
+- "/dist/js/jquery-3.5.1.js"
 - "/dist/js/bootstrap.min.js"
 - "/dist/js/main.js"
 ---
