--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,7 +6,6 @@ layout: base
 
 <div class="container">
   <div class="row">
-    <!-- <div class="col-lg-8"> -->
       {% if page.gh-repo %}
         {% assign gh_split =  page.gh-repo | split:'/'  %}
         {% assign gh_user =  gh_split[0]  %}
@@ -78,12 +77,11 @@ layout: base
         {% endif %}
       </ul>
   
-      {% if page.comments %}
+      <!-- {% if page.comments %}
         <div class="disqus-comments">
           {% include disqus.html %}
         </div>
-      {% endif %}
-    <!-- </div> -->
+      {% endif %} -->
 
   </div>
   
