--- a/Topic/ARGB-LED/assets/js/styles.css
+++ b/Topic/ARGB-LED/assets/js/styles.css
@@ -44,8 +44,9 @@ body {
     display: none;
     position: fixed;
     z-index: 1000;
-    left: 0;
-    top: 0;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.8);
@@ -58,6 +59,9 @@ body {
     margin: auto;
     max-width: 90%;
     max-height: 90%;
+    position: relative;
+    top: 50%;
+    transform: translateY(-50%);
 }
 
 .close {
