Cập nhật site.url trong file _config.yml để chạy localhost và server github-page ok luôn!

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -177,7 +177,7 @@
           
           {% if site.url-pretty %}
           &nbsp;&bull;&nbsp;
-          <a href="/">{{ site.url-pretty }}</a>
+          <a href="{{ site.url }}">{{ site.url-pretty }}</a>
           {% endif %}
             <br>
           <img alt="GitHub release (latest by date)" src="https://img.shields.io/github/v/release/bangnguyendev/bangnguyendev.github.io?color=success&logo=github">
