--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -7,10 +7,10 @@
           <i style="color: #242424;" class="fa fa-cog fa-spin fa-1x fa-fw"></i>
       </button>
 
-      <a class="navbar-brand navbar-brand-logo" href="/">
+      <a class="navbar-brand navbar-brand-logo" href="{{ site.url }}">
         <img src="{{ site.avatar }}" alt="bangnguyendev"/>
       </a>
-      <a class="navbar-brand" href="/">{{ site.title }}</a>
+      <a class="navbar-brand" href="{{ site.url }}">{{ site.title }}</a>
 
     </div>
 
